# couch-nagger

./: .gitignore  GEMINI.md  README.md  deploy.sh  pyproject.toml  setup.py  shim_monitor.py  spike.py
assets/audio/: README.md
config/: README.md  couch-nagger.service.example  development.py  production.env.example  production.py
docs/: API-Reference.md  Architecture.md  Configuration.md  Deployment.md  Examples.md  Home.md  Installation.md  README.md  Testing.md  Troubleshooting.md
scripts/: README.md  cam_test.py  pi_bootstrap.sh  pi_deploy.sh  pi_health_check.sh  remote_deploy.sh  setup_pi.sh
src/: monitor.py
src/dog_detector/: __init__.py  bootstrap.py  bootstrap_pi.py  camera.py  dog_detector.py  monitor.py  settings.py
src/dog_detector/adapters/: audio_alert.py  detection_saver.py  file_source.py  picamera2_source.py  ultralytics_detector.py
src/dog_detector/app/: couch_monitor.py  monitor.py
src/dog_detector/domain/: model.py
src/dog_detector/ports/: alert_sink.py  detection_saver.py  detector.py  frame_source.py
systemd/: couch-nagger.service
tests/: debug_detection.py  test_dog_detector.py  test_monitor_app.py
tests/adapters/: test_audio_alert.py
